--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "less": "^4.1.0",
     "less-loader": "^7.2.1",
     "vue": "^2.6.11",
+    "vue-json-editor": "^1.4.3",
+    "vue-json-viewer": "^2.2.18",
     "vue-router": "^3.4.9"
   },
   "devDependencies": {
